--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 6.1.0-M4 (2021-02-18)
+----------------------------------------
+* #2154 - Return new instance after incrementing version property on immutables.
+
+
 Changes in version 6.0.5 (2021-02-18)
 -------------------------------------
 * #2154 - Return new instance after incrementing version property on immutables.
@@ -2103,6 +2108,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
