--- a/src/main/asciidoc/appendix/custom-queries.adoc
+++ b/src/main/asciidoc/appendix/custom-queries.adoc
@@ -303,7 +303,8 @@ interface BaseClassRepository extends Neo4jRepository<Inheritance.BaseClass, Lon
 }
 ----
 <.> The `literal` extension will be replaced with the literal value of the evaluated parameter.
-Here it has been used to match dynamically on a Label.
+
+Here, the `literal` value has been used to match dynamically on a Label.
 If you pass in `SomeLabel` as a parameter to the method, `MATCH (n:``SomeLabel``) RETURN n`
 will be generated. Ticks have been added to correctly escape values. SDN won't do this
 for you as this is probably not what you want in all cases.
