--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -33,7 +33,6 @@ NOTE: Copies of this document may be made for your own use and for distribution 
 
 include::introduction-and-preface/index.adoc[]
 include::{spring-data-commons-docs}/dependencies.adoc[leveloffset=+1]
-include::{spring-data-commons-docs}/repositories.adoc[leveloffset=+1]
 
 [[reference]]
 = Reference Documentation
@@ -48,6 +47,12 @@ This manual is written for:
 include::getting-started/index.adoc[]
 
 include::object-mapping/index.adoc[]
+
+include::{spring-data-commons-docs}/repositories.adoc[leveloffset=+1]
+
+include::{spring-data-commons-docs}/query-by-example.adoc[leveloffset=+2]
+
+include::object-mapping/sdn-extensions.adoc[leveloffset=+1]
 
 include::{spring-data-commons-docs}/repository-projections.adoc[leveloffset=+1]
 
