--- a/src/main/asciidoc/object-mapping/projections.adoc
+++ b/src/main/asciidoc/object-mapping/projections.adoc
@@ -126,12 +126,23 @@ interface TestRepository extends CrudRepository<TestEntity, Long> { // <.>
 <.> Methods returning one or more `TestEntity` will just return instances of it, as it matches the domain type
 <.> Methods returning one or more instances of class that extend the domain type will just return instances
     of the extending class. The domain type of the method in question will the extended class, which
-    still satifies the domain type of the repository itself
+    still satisfies the domain type of the repository itself
 <.> This method returns an interface projection, the return type of the method is therefore different
     from the repository's domain type. The interface can only access properties defined in the domain type
 <.> This method returns a DTO projection. Executing it will cause SDN to issue a warning, as the DTO defines
     `numberOfRelations` as additional attribute, which is not in the contract of the domain type.
     The annotated attribute `aProperty` in `TestEntity` will be correctly translated to `a_property` in the query.
-    As above, the return type is different from the repositories domain type.
+    As above, the return type is different from the repositories' domain type.
 <.> This method also returns a DTO projection. However, no warning will be issued, as the query contains a fitting
     value for the additional attributes defined in the projection.
+
+TIP: While the repository in <<projections.simple-entity-repository,the listing above>> uses a concrete return type to
+     define the projection, another variant is the use of <<projection.dynamic,dynamic projections>> as explained in the
+     parts of the documentation Spring Data Neo4j shares with other Spring Data Projects. A dynamic projection can be
+     applied to both closed and open interface projections as well as to class based DTO projections:
+     +
+     +
+     The key to a dynamic projection is to specifiy the desired projection type as the last parameter to a query method
+     in a repository like this: `<T> Collection<T> findByName(String name, Class<T> type)`. This is a declaration that
+     could be added to the `TestRepository` above and allow for different projections retrieved by the same method, without
+     to repeat a possible `@Query` annotation on several methods.
