--- a/src/main/asciidoc/object-mapping/mapping.adoc
+++ b/src/main/asciidoc/object-mapping/mapping.adoc
@@ -164,6 +164,10 @@ You must define a property for the generated, internal ID so that SDN can determ
 can be safely overwritten without losing properties.
 If SDN does not find a field for storing the internal node id, it will fail during startup.
 
+NOTE: The only supported generated ID field on classes annotated with `@RelationshipProperties` is `@GeneratedValue` with
+      using the default ID generator `InternalIdGenerator` as shown above. Other generators will lead to a failure during
+      startup..
+
 .Defining relationship properties for an entity
 [source,java,indent=0]
 ----
