--- a/src/main/asciidoc/object-mapping/mapping.adoc
+++ b/src/main/asciidoc/object-mapping/mapping.adoc
@@ -125,6 +125,9 @@ The data structure needed is shown in the following test. The same would be writ
 include::../../../../src/test/java/org/springframework/data/neo4j/integration/imperative/InheritanceMappingIT.java[tag=interface3]
 ----
 
+NOTE: Interfaces cannot define an identifier field.
+As a consequence they are not a valid entity type for repositories.
+
 [[mapping.annotations.node.dynamic.labels]]
 ==== Dynamic or "runtime" managed labels
 
