--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 5.3.9.RELEASE (2021-04-14)
+---------------------------------------------
+* #2221 - Upgrade to Neo4j-OGM 3.2.21.
+* #2213 - Enum properties fail to convert with constructor instantiation.
+* #2146 - Clean up repository declarations.
+
+
 Changes in version 6.0.7 (2021-03-31)
 -------------------------------------
 * #2203 - Enable mapping of list of lists of nodes or relationships.
@@ -2173,6 +2180,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
