--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,18 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 6.1.0 (2021-04-14)
+-------------------------------------
+* #2225 - Improve label determination for inherited entities.
+* #2224 - Upgrade to Cypher-DSL 2021.2.0.
+* #2220 - Align Neo4j and Neo4j driver versions.
+* #2219 - Upgrade to Cypher-DSL 2021.1.2.
+* #2218 - Upgrade to Neo4j-Java-Driver 4.2.4.
+* #2214 - SDN not creating UUID when saving.
+* #2201 - Not able to create more than one repository interface.
+* #2146 - Clean up repository declarations.
+
+
 Changes in version 6.0.8 (2021-04-14)
 -------------------------------------
 * #2225 - Improve label determination for inherited entities.
@@ -2190,6 +2202,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
