--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,22 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 6.0.9 (2021-05-14)
+-------------------------------------
+* #2250 - Upgrade to Neo4j-Java-Driver 4.1.2..
+* #2248 - Don't swallow or delete cause of translated exceptions.
+* #2246 - Deterministic mapping of records with mixed results.
+* #2244 - Fix detection of common element types in collections of persistent entities.
+* #2243 - Add support for missing DISTINCT keyword.
+* #2241 - Create empty collections instead of null.
+* #2240 - Unable to convert java.util.UUID to Neo4j Value.
+* #2239 - Resolve or remove literal replacements in custom count queries.
+* #2236 - Create correct collection type for RelationshipProperties.
+* #2228 - Support multiple relationships properties to same node.
+* #2223 - Generated objects onSave are not considered as already processed.
+* #2210 - Improve documentation for hydrating collections based on queries returning paths.
+
+
 Changes in version 6.1.0 (2021-04-14)
 -------------------------------------
 * #2225 - Improve label determination for inherited entities.
@@ -2202,6 +2218,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
